2010-11-06   D. V. Wiebe <getdata@ketiltrout.net>   svn:470
	* src/getdata.h.in: Rename 'cons' to 'scalar' in the unified entry struct.

	* src/internal.h: Remove GD_ANON from the private entry struct.

2010-11-06   D. V. Wiebe <getdata@ketiltrout.net>   svn:469

	* bindings/python/test/big_test.py bindings/cxx/test/big_test.cpp
	bindings/f77/test/big_test.f bindings/f77/test/big_test95.f90
	bindings/idl/test/big_test.pro: Added tests 158 through 181.
	
	* test/put_carray_slice.c test/cvlist_array_meta.c test/del_carray.c
	test/get_carray_slice.c test/cvlist_array.c test/del_carray_deref.c
	test/nmeta_vectors_del.c test/get_carray.c test/parse_carray.c
	test/madd_carray.c test/add_carray.c test/put_carray.c test/get_carray_len.c
	test/parse_carray_long.c test/alter_carray_len.c test/alter_carray_type.c:
	Added.

	* test/madd.c: Remove gd_get_constant call.

	* test/parse_const.c: Actually test what is advertised.

	* bindings/python/pydirfile.c (gdpy_dirfile_getcarray gdpy_dirfile_carraylen
	gdpy_dirfile_carrays gdpy_dirfile_mcarrays gdpy_dirfile_putcarray)
	bindings/python/pyentry.c (gdpy_entry_getarraylen gdpy_entry_setarraylen):
	Added.
	* bindings/python/pyentry.c (gdpy_set_entry_from_tuple
	gdpy_set_entry_from_dict gdpy_entry_getinfields gdpy_entry_getdatatypename
	gdpy_entry_getdatatype): Update for CARRAY.

	* bindings/cxx/bitentry.cpp (BitEntry::ScalarIndex) bindings/cxx/entry.cpp
	(scalar_ok Entry::ScalarIndex Entry::SetScalar) bindings/cxx/lincomentry.cpp
	(LincomEntry::ScalarIndex) bindings/cxx/dirfile.cpp (Dirfile::Carrays
	Dirfile::CarrayLen Dirfile::MCarrays Dirfile::GetCarray Dirfile::PutCarray)
	bindings/cxx/polynomentry.cpp (PolynomEntry::ScalarIndex)
	bindings/cxx/sbitentry.cpp (SBitEntry::ScalarIndex)
	bindings/cxx/getdata/rawentry.h (ScalarIndex)
	bindings/cxx/getdata/recipentry.h (ScalarIndex): Added.
	* bindings/cxx/bitentry.cpp (BitEntry::SetFirstBit BitEntry::SetNumBits)